# Mobile-Robots-2024-2

./: .gitignore  LICENSE  README.md  Setup.sh
catkin_ws/: .gitignore
catkin_ws/src/config_files/: known_locations.yaml  known_locations_simul.yaml
catkin_ws/src/config_files/justina/arms/: left_arm_params.yaml  right_arm_params.yaml
catkin_ws/src/config_files/justina/head/: head_params.yaml
catkin_ws/src/config_files/justina/manipulation/: la_inverse_kinematics.yaml  la_predefined.yaml  ra_inverse_kinematics.yaml  ra_predefined.yaml  takeshi_inverse_kinematics.yaml
catkin_ws/src/config_files/justina/ros_control/: gmapping_params.yaml  justina_gazebo_controllers.yaml
catkin_ws/src/config_files/maps/: appartment.pgm  appartment.yaml  mapa_itzel.pgm  mapa_itzel.yaml
catkin_ws/src/config_files/rviz/: justina.rviz  justina_mapping.rviz  localization.rviz  movement_planning.rviz
catkin_ws/src/hardware/hardware_tools/src/hardware_tools/: torque_pub.py
catkin_ws/src/hardware/justina/arms/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/justina/arms/launch/: arms_temp.launch
catkin_ws/src/hardware/justina/arms/src/: arm_node.cpp  servo_test.cpp
catkin_ws/src/hardware/justina/freenect_stack/: .travis.yml
catkin_ws/src/hardware/justina/gazebo_envs/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/justina/gazebo_envs/scripts/: topic_resender.py
catkin_ws/src/hardware/justina/head/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/justina/mobile_base/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/justina/mobile_base/scripts/: omni_base.py
catkin_ws/src/hardware/justina/mobile_base/scripts/testing/: encoder_roboclaw_test.py  roboclaw_odometry_test.py  roboclaw_read.py
catkin_ws/src/hardware/justina/mobile_base/src/: omni_base_node.cpp  roboclaw.cpp
catkin_ws/src/hardware/justina/torso/: CMakeLists.txt
catkin_ws/src/hardware/justina/torso/src/: torso_fake.cpp  torso_node_pololu.cpp
catkin_ws/src/hri/hri_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/hri/justina_gui/: CMakeLists.txt  package.xml
catkin_ws/src/hri/justina_gui/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  QtRosNode.cpp  QtRosNode.h  justina_gui_node.cpp
catkin_ws/src/manipulation/manip_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/manipulation/manip_msgs/srv/: BestGraspTraj.srv
catkin_ws/src/navigation/map_augmenter/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/map_augmenter/scripts/: gvd.py  map_inflater.py  split_and_merge.py
catkin_ws/src/navigation/navig_msgs/: CMakeLists.txt
catkin_ws/src/navigation/navig_msgs/srv/: ProcessPath.srv
catkin_ws/src/navigation/particle_filter/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/particle_filter/src/: pf.cpp  ray_tracer.cpp
catkin_ws/src/navigation/path_planner/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/path_planner/scripts/: .a_star.py.swp  .pot_fields.py.swp  .rrt.py.swp  a_star.py  cost_map.py  path_smoothing.py  pot_fields.py  pot_fields.py.save  rrt.py
catkin_ws/src/navigation/simple_move/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/simple_move/scripts/: path_follower.py  ros_basics.py  ros_basics.py.save
catkin_ws/src/surge_et_ambula/launch/justina/: .justina.launch.swp  hri.launch  justina.launch  justina_gazebo.launch  justina_gazebo_mapping.launch  justina_mapping.launch  localization.launch  manipulation.launch  movement_planning.launch  navigation.launch  vision.launch
catkin_ws/src/vision/vision_msgs/: CMakeLists.txt
catkin_ws/src/vision/vision_msgs/msg/: VisionObject.msg
catkin_ws/src/vision/vision_msgs/srv/: FindPerson.srv  FindPlanes.srv  HumanPoseEstimatorResult.srv  RecognizeObject.srv  RecognizeObjects.srv
(+40 files in other folders)
